# speech_enhancement_rnnoise_mcra

./: CMakeLists.txt  README.md  main.c
include/: DSP_denoise.h  Platform.h  define.h  denoise_function.h  fft.h  lpc_pitch.h  rnn.h  rnn_weight.h  table.h
src/: denoise_function.c  fft.c  lpc_pitch.c  mcra.c  python2c.py  rnn.c  rnn_weight.c  run_train.sh  train.py  train_main.c
