cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_STANDARD 99)
include_directories(${CMAKE_SOURCE_DIR}/include /usr/lib/x86_64-linux-gnu)
project(DENOISE)
link_directories(../build)
set(SRC src/fft.c src/lpc_pitch.c src/mcra.c src/rnn.c src/rnn_weight.c src/denoise_function.c)
add_library(denoise SHARED ${SRC})
#add_library(denoise STATIC ${SRC})
add_executable(DENOISE main.c)
target_link_libraries (DENOISE denoise)
target_link_libraries (DENOISE m)